--- a/templates/index.html
+++ b/templates/index.html
@@ -1,97 +1,176 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--
+	Astral by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
-    <meta content="width=device-width,initial-scale=1" name="viewport" />
-    <meta content="description" name="description" />
-    <meta name="google" content="notranslate" />
+    <title>Astral by HTML5 UP</title>
+    <meta charset="utf-8" />
     <meta
-      content="Mashup templates have been developped by Orson.io team"
-      name="author"
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
     />
-
-    <!-- Disable tap highlight on IE -->
-    <meta name="msapplication-tap-highlight" content="no" />
-
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./static/assets/apple-icon-180x180.png"
-    />
-    <link href="./static/assets/favicon.ico" rel="icon" />
-
-    <title>Title page</title>
-
-    <link href="./static/main.3f6952e4.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./static/assets/css/main.css" />
+    <noscript
+      ><link rel="stylesheet" href="./static/assets/css/noscript.css"
+    /></noscript>
   </head>
-
-  <body class="minimal">
-    <div id="site-border-left"></div>
-    <div id="site-border-right"></div>
-    <div id="site-border-top"></div>
-    <div id="site-border-bottom"></div>
-    <!-- Add your content of header -->
-    <header>
-      <nav class="navbar navbar-fixed-top navbar-inverse">
-        <div class="container">
-          <button
-            type="button"
-            class="navbar-toggle collapsed"
-            data-toggle="collapse"
-            data-target="#navbar-collapse"
-            aria-expanded="false"
-          >
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbar-collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="./index.html" title="">01 : Home</a></li>
-              <li><a href="./works.html" title="">02 : Works</a></li>
-              <li><a href="./about.html" title="">03 : About me</a></li>
-              <li><a href="./contact.html" title="">04 : Contact</a></li>
-            </ul>
-          </div>
-        </div>
+  <body class="is-preload">
+    <!-- Wrapper-->
+    <div id="wrapper">
+      <!-- Nav -->
+      <nav id="nav">
+        <a href="#" class="icon solid fa-home"><span>Home</span></a>
+        <a href="#work" class="icon solid fa-folder"><span>Work</span></a>
+        <a href="#contact" class="icon solid fa-envelope"
+          ><span>Contact</span></a
+        >
+        <a href="https://twitter.com/frdshits" class="icon brands fa-twitter"
+          ><span>Twitter</span></a
+        >
       </nav>
-    </header>
-    <!-- Add your site or app content here -->
-    <div
-      class="hero-full-container background-image-container white-text-container"
-      style="background-image: url('./static/assets/images/space.jpg')"
-    >
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12">
-            <div class="hero-full-wrapper">
-              <div class="text-content">
-                <h1>
-                  Hello,<br />
-                  <span id="typed-strings">
-                    <span>I'm Ferdian Oktavianto</span>
-                    <span>Python Developer</span>
-                    <span>Freelancer <3 </span>
-                  </span>
-                  <span id="typed"></span>
-                </h1>
+
+      <!-- Main -->
+      <div id="main">
+        <!-- Me -->
+        <article id="home" class="panel intro">
+          <header>
+            <h1>Ferdian Oktavianto</h1>
+            <p>Python Developer</p>
+          </header>
+          <a href="#work" class="jumplink pic">
+            <span class="arrow icon solid fa-chevron-right"
+              ><span>See my work</span></span
+            >
+            <img src="./static/images/me.jpg" alt="" />
+          </a>
+        </article>
+
+        <!-- Work -->
+        <article id="work" class="panel">
+          <header>
+            <h2>Work</h2>
+          </header>
+          <p>
+            Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum
+            eu elit. Vestibulum ante ipsum primis in faucibus orci luctus et
+            ultrices posuere cubilia luctus elit eget interdum.
+          </p>
+          <section>
+            <div class="row">
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="./static/images/pic01.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="./static/images/pic02.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="./static/images/pic03.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="./static/images/pic04.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="./static/images/pic05.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="./static/images/pic06.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="./static/images/pic07.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="./static/images/pic08.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="./static/images/pic09.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="./static/images/pic10.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="./static/images/pic11.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="./static/images/pic12.jpg" alt=""
+                /></a>
               </div>
             </div>
-          </div>
-        </div>
+          </section>
+        </article>
+
+        <!-- Contact -->
+        <article id="contact" class="panel">
+          <header>
+            <h2>Contact Me</h2>
+          </header>
+          <form action="#" method="post">
+            <div>
+              <div class="row">
+                <div class="col-6 col-12-medium">
+                  <input type="text" name="name" placeholder="Name" />
+                </div>
+                <div class="col-6 col-12-medium">
+                  <input type="text" name="email" placeholder="Email" />
+                </div>
+                <div class="col-12">
+                  <input type="text" name="subject" placeholder="Subject" />
+                </div>
+                <div class="col-12">
+                  <textarea
+                    name="message"
+                    placeholder="Message"
+                    rows="6"
+                  ></textarea>
+                </div>
+                <div class="col-12">
+                  <input type="submit" value="Send Message" />
+                </div>
+              </div>
+            </div>
+          </form>
+        </article>
+      </div>
+
+      <!-- Footer -->
+      <div id="footer">
+        <ul class="copyright">
+          <li>&copy; ferdiokt</li>
+          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        </ul>
       </div>
     </div>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", function (event) {
-        type();
-        movingBackgroundImage();
-      });
-    </script>
-
-    <script type="text/javascript" src="./static/main.70a66962.js"></script>
+    <!-- Scripts -->
+    <script src="./static/assets/js/jquery.min.js"></script>
+    <script src="./static/assets/js/browser.min.js"></script>
+    <script src="./static/assets/js/breakpoints.min.js"></script>
+    <script src="./static/assets/js/util.js"></script>
+    <script src="./static/assets/js/main.js"></script>
   </body>
 </html>
