--- a/templates/index.html
+++ b/templates/index.html
@@ -1,176 +1,236 @@
 <!DOCTYPE html>
 <!--
-	Astral by HTML5 UP
+	Read Only by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
   <head>
-    <title>Astral by HTML5 UP</title>
+    <title>Ferdian Oktavianto Portfolio Page</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <link rel="stylesheet" href="./static/assets/css/main.css" />
-    <noscript
-      ><link rel="stylesheet" href="./static/assets/css/noscript.css"
-    /></noscript>
+    <link rel="stylesheet" href="{{url_for('static', filename= 'assets/css/main.css' )}}" />
   </head>
   <body class="is-preload">
-    <!-- Wrapper-->
-    <div id="wrapper">
-      <!-- Nav -->
+    <!-- Header -->
+    <section id="header">
+      <header>
+        <span class="image avatar"
+          ><img src="{{url_for('static', filename= 'images/avatar.jpg')}}" alt=""
+        /></span>
+        <h1 id="logo"><a href="#">Ferdian Oktavianto</a></h1>
+        <p>
+          Python developer<br />
+          Sometimes i play with data.
+        </p>
+      </header>
       <nav id="nav">
-        <a href="#" class="icon solid fa-home"><span>Home</span></a>
-        <a href="#work" class="icon solid fa-folder"><span>Work</span></a>
-        <a href="#contact" class="icon solid fa-envelope"
-          ><span>Contact</span></a
-        >
-        <a href="https://twitter.com/frdshits" class="icon brands fa-twitter"
-          ><span>Twitter</span></a
-        >
+        <ul>
+          <li><a href="#one" class="active">About Me</a></li>
+          <li><a href="#two">Things I Can Do</a></li>
+          <li><a href="#three">My Work</a></li>
+          <li><a href="#four">Contact</a></li>
+        </ul>
       </nav>
+      <footer>
+        <ul class="icons">
+          <li>
+            <a
+              href="https://www.linkedin.com/in/ferdiokts/"
+              class="icon brands fa-linkedin"
+              ><span class="label">Linkedin</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/ferdiokts/"
+              class="icon brands fa-instagram"
+              ><span class="label">Instagram</span></a
+            >
+          </li>
+          <li>
+            <a href="https://github.com/ferdiokt" class="icon brands fa-github"
+              ><span class="label">Github</span></a
+            >
+          </li>
+          <li>
+            <a href="#four" class="icon solid fa-envelope"
+              ><span class="label">Email</span></a
+            >
+          </li>
+        </ul>
+      </footer>
+    </section>
 
+    <!-- Wrapper -->
+    <div id="wrapper">
       <!-- Main -->
       <div id="main">
-        <!-- Me -->
-        <article id="home" class="panel intro">
-          <header>
-            <h1>Ferdian Oktavianto</h1>
-            <p>Python Developer</p>
-          </header>
-          <a href="#work" class="jumplink pic">
-            <span class="arrow icon solid fa-chevron-right"
-              ><span>See my work</span></span
-            >
-            <img src="./static/images/me.jpg" alt="" />
-          </a>
-        </article>
+        <!-- One -->
+        <section id="one">
+          <div class="container">
+            <header class="major">
+              <h2>About Me</h2>
+              <p>I'm a developer based on Jakarta, Indonesia.<br /></p>
+            </header>
+            <p>
+              Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus
+              col. Commodo id in arcu ante lorem ipsum sed accumsan erat
+              praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo.
+              Vis aliquet tortor ultricies non ante erat nunc integer eu ante
+              ornare amet commetus vestibulum blandit integer in curae ac
+              faucibus integer non. Adipiscing cubilia elementum.
+            </p>
+          </div>
+        </section>
 
-        <!-- Work -->
-        <article id="work" class="panel">
-          <header>
-            <h2>Work</h2>
-          </header>
-          <p>
-            Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum
-            eu elit. Vestibulum ante ipsum primis in faucibus orci luctus et
-            ultrices posuere cubilia luctus elit eget interdum.
-          </p>
-          <section>
-            <div class="row">
-              <div class="col-4 col-6-medium col-12-small">
-                <a href="#" class="image fit"
-                  ><img src="./static/images/pic01.jpg" alt=""
-                /></a>
-              </div>
-              <div class="col-4 col-6-medium col-12-small">
-                <a href="#" class="image fit"
-                  ><img src="./static/images/pic02.jpg" alt=""
-                /></a>
-              </div>
-              <div class="col-4 col-6-medium col-12-small">
-                <a href="#" class="image fit"
-                  ><img src="./static/images/pic03.jpg" alt=""
-                /></a>
-              </div>
-              <div class="col-4 col-6-medium col-12-small">
-                <a href="#" class="image fit"
-                  ><img src="./static/images/pic04.jpg" alt=""
-                /></a>
-              </div>
-              <div class="col-4 col-6-medium col-12-small">
-                <a href="#" class="image fit"
-                  ><img src="./static/images/pic05.jpg" alt=""
-                /></a>
-              </div>
-              <div class="col-4 col-6-medium col-12-small">
-                <a href="#" class="image fit"
-                  ><img src="./static/images/pic06.jpg" alt=""
-                /></a>
-              </div>
-              <div class="col-4 col-6-medium col-12-small">
-                <a href="#" class="image fit"
-                  ><img src="./static/images/pic07.jpg" alt=""
-                /></a>
-              </div>
-              <div class="col-4 col-6-medium col-12-small">
-                <a href="#" class="image fit"
-                  ><img src="./static/images/pic08.jpg" alt=""
-                /></a>
-              </div>
-              <div class="col-4 col-6-medium col-12-small">
-                <a href="#" class="image fit"
-                  ><img src="./static/images/pic09.jpg" alt=""
-                /></a>
-              </div>
-              <div class="col-4 col-6-medium col-12-small">
-                <a href="#" class="image fit"
-                  ><img src="./static/images/pic10.jpg" alt=""
-                /></a>
-              </div>
-              <div class="col-4 col-6-medium col-12-small">
-                <a href="#" class="image fit"
-                  ><img src="./static/images/pic11.jpg" alt=""
-                /></a>
-              </div>
-              <div class="col-4 col-6-medium col-12-small">
-                <a href="#" class="image fit"
-                  ><img src="./static/images/pic12.jpg" alt=""
-                /></a>
-              </div>
-            </div>
-          </section>
-        </article>
+        <!-- Two -->
+        <section id="two">
+          <div class="container">
+            <h3>Things I Can Do</h3>
+            <p>
+              Integer eu ante ornare amet commetus vestibulum blandit integer in
+              curae ac faucibus integer non. Adipiscing cubilia elementum
+              integer lorem ipsum dolor sit amet.
+            </p>
+            <ul class="feature-icons">
+              <li class="icon solid fa-code">Write all the code</li>
+              <li class="icon solid fa-cubes">Stack small boxes</li>
+              <li class="icon solid fa-book">Read books and stuff</li>
+              <li class="icon solid fa-coffee">Drink much coffee</li>
+              <li class="icon solid fa-bolt">Lightning bolt</li>
+              <li class="icon solid fa-users">Shadow clone technique</li>
+            </ul>
+          </div>
+        </section>
 
-        <!-- Contact -->
-        <article id="contact" class="panel">
-          <header>
-            <h2>Contact Me</h2>
-          </header>
-          <form action="#" method="post">
-            <div>
-              <div class="row">
-                <div class="col-6 col-12-medium">
-                  <input type="text" name="name" placeholder="Name" />
+        <!-- Three -->
+        <section id="three">
+          <div class="container">
+            <h3>My Work</h3>
+            <p>
+              Integer eu ante ornare amet commetus vestibulum blandit integer in
+              curae ac faucibus integer non. Adipiscing cubilia elementum
+              integer. Integer eu ante ornare amet commetus.
+            </p>
+            <div class="features">
+              <article>
+                <a href="#" class="image"
+                  ><img src="{{url_for('static', filename= 'images/pic01.jpg')}}" alt=""
+                /></a>
+                <div class="inner">
+                  <h4>Dictionary using Python</h4>
+                  <p>
+                    Integer eu ante ornare amet commetus vestibulum blandit
+                    integer in curae ac faucibus integer adipiscing ornare amet.
+                  </p>
                 </div>
-                <div class="col-6 col-12-medium">
-                  <input type="text" name="email" placeholder="Email" />
+              </article>
+              <article>
+                <a href="./plot" class="image"
+                  ><img src="{{url_for('static', filename= 'images/pic02.jpg')}}" alt=""
+                /></a>
+                <div class="inner">
+                  <a href="./plot">
+                  <h4>Daily Stock Price using Bokeh</h4></a>                
+                  <p>
+                    Integer eu ante ornare amet commetus vestibulum blandit
+                    integer in curae ac faucibus integer adipiscing ornare amet.
+                  </p>
+                </div>
+              </article>
+              <article>
+                <a href="#" class="image"
+                  ><img src="{{url_for('static', filename= 'images/pic03.jpg')}}" alt=""
+                /></a>
+                <div class="inner">
+                  <h4>Snapped dark matter in the wild</h4>
+                  <p>
+                    Integer eu ante ornare amet commetus vestibulum blandit
+                    integer in curae ac faucibus integer adipiscing ornare amet.
+                  </p>
+                </div>
+              </article>
+            </div>
+          </div>
+        </section>
+
+        <!-- Four -->
+        <section id="four">
+          <div class="container">
+            <h3>Contact Me</h3>
+            <p>
+              Integer eu ante ornare amet commetus vestibulum blandit integer in
+              curae ac faucibus integer non. Adipiscing cubilia elementum
+              integer. Integer eu ante ornare amet commetus.
+            </p>
+            <form method="post" action="#">
+              <div class="row gtr-uniform">
+                <div class="col-6 col-12-xsmall">
+                  <input type="text" name="name" id="name" placeholder="Name" />
+                </div>
+                <div class="col-6 col-12-xsmall">
+                  <input
+                    type="email"
+                    name="email"
+                    id="email"
+                    placeholder="Email"
+                  />
                 </div>
                 <div class="col-12">
-                  <input type="text" name="subject" placeholder="Subject" />
+                  <input
+                    type="text"
+                    name="subject"
+                    id="subject"
+                    placeholder="Subject"
+                  />
                 </div>
                 <div class="col-12">
                   <textarea
                     name="message"
+                    id="message"
                     placeholder="Message"
                     rows="6"
                   ></textarea>
                 </div>
                 <div class="col-12">
-                  <input type="submit" value="Send Message" />
+                  <ul class="actions">
+                    <li>
+                      <input
+                        type="submit"
+                        class="primary"
+                        value="Send Message"
+                      />
+                    </li>
+                    <li><input type="reset" value="Reset Form" /></li>
+                  </ul>
                 </div>
               </div>
-            </div>
-          </form>
-        </article>
-      </div>
+            </form>
+          </div>
+        </section>
 
       <!-- Footer -->
-      <div id="footer">
-        <ul class="copyright">
-          <li>&copy; ferdiokt</li>
-          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-        </ul>
-      </div>
+      <section id="footer">
+        <div class="container">
+          <ul class="copyright">
+            <li>&copy; ferdiokt. All rights reserved.</li>
+            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+          </ul>
+        </div>
+      </section>
     </div>
 
     <!-- Scripts -->
-    <script src="./static/assets/js/jquery.min.js"></script>
-    <script src="./static/assets/js/browser.min.js"></script>
-    <script src="./static/assets/js/breakpoints.min.js"></script>
-    <script src="./static/assets/js/util.js"></script>
-    <script src="./static/assets/js/main.js"></script>
+    <script src="{{url_for('static', filename= 'assets/js/jquery.min.js')}}"></script>
+    <script src="{{url_for('static', filename= 'assets/js/jquery.scrollex.min.js')}}"></script>
+    <script src="{{url_for('static', filename= 'assets/js/jquery.scrolly.min.js')}}"></script>
+    <script src="{{url_for('static', filename= 'assets/js/browser.min.js')}}"></script>
+    <script src="{{url_for('static', filename= 'assets/js/breakpoints.min.js')}}"></script>
+    <script src="{{url_for('static', filename= 'assets/js/util.js')}}"></script>
+    <script src="{{url_for('static', filename= 'assets/js/main.js')}}"></script>
   </body>
 </html>
