--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
       sizes="180x180"
       href="./static/images/apple-icon-180x180.png"
     />
-    <link href="./static/assets/favicon.ico" rel="icon" />
+    <link href="./static/images/favicon.ico" rel="icon" />
 
     <title>Ferdian Oktavianto Portfolio Page</title>
 
@@ -87,30 +87,64 @@
                 <h2>Projects</h2>
                 <div class="row">
                   <div class="col-md-4">
-                    <img
-                      src="./static/images/img-02.jpg"
-                      class="img-responsive"
-                      alt=""
-                    />
-                    <h3 class="h5">Python Dictionary</h3>
+                    <a
+                      href="https://github.com/ferdiokt/py-dictionary"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <img
+                        src="./static/images/img-02.jpg"
+                        class="img-responsive"
+                        alt=""
+                      />
+                    </a>
+                    <a
+                      href="https://github.com/ferdiokt/py-dictionary"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <h3 class="h5">Python Dictionary</h3></a
+                    >
                     <p>A simple dictionary program using Python.</p>
                   </div>
                   <div class="col-md-4">
-                    <img
-                      src="./static/images/img-03.jpg"
-                      class="img-responsive"
-                      alt=""
-                    />
-                    <h3 class="h5">Stock Chart using Python</h3>
+                    <a
+                      href="https://github.com/ferdiokt/py-stock_chart"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <img
+                        src="./static/images/img-03.jpg"
+                        class="img-responsive"
+                        alt=""
+                    /></a>
+                    <a
+                      href="https://github.com/ferdiokt/py-stock_chart"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <h3 class="h5">Stock Chart using Python</h3></a
+                    >
                     <p>Using python to plot a stock chart</p>
                   </div>
                   <div class="col-md-4">
-                    <img
-                      src="./static/images/img-04.jpg"
-                      class="img-responsive"
-                      alt=""
-                    />
-                    <h3 class="h5">Motion Detector with Python</h3>
+                    <a
+                      href="https://github.com/ferdiokt/py-cam_motion_detector"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <img
+                        src="./static/images/img-04.jpg"
+                        class="img-responsive"
+                        alt=""
+                    /></a>
+                    <a
+                      href="https://github.com/ferdiokt/py-cam_motion_detector"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <h3 class="h5">Motion Detector with Python</h3></a
+                    >
                     <p>Using python to detect motion with a webcam</p>
                   </div>
                 </div>
@@ -126,7 +160,9 @@
                     Merchant Acquisition
                     <a
                       href="https://shipper.id/"
-                      title="Create professionnal website"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      title="Shipper"
                       >Shipper</a
                     >
                   </h3>
@@ -228,7 +264,11 @@
                 <div class="row">
                   <div class="col-md-3">
                     <p class="social-buttons">
-                      <a href="https://www.instagram.com/ferdiokts/" title=""
+                      <a
+                        href="https://www.instagram.com/ferdiokts/"
+                        title=""
+                        target="_blank"
+                        rel="noopener noreferrer"
                         ><span class="social-round-icon fa-icon"
                           ><i class="fa fa-instagram"></i></span
                         >@ferdiokts</a
@@ -237,7 +277,11 @@
                   </div>
                   <div class="col-md-3">
                     <p class="social-buttons">
-                      <a href="https://www.linkedin.com/in/ferdiokts/" title=""
+                      <a
+                        href="https://www.linkedin.com/in/ferdiokts/"
+                        title=""
+                        target="_blank"
+                        rel="noopener noreferrer"
                         ><span class="social-round-icon fa-icon"
                           ><i class="fa fa-linkedin"></i></span
                         >Ferdian Oktavianto</a
@@ -246,7 +290,11 @@
                   </div>
                   <div class="col-md-3">
                     <p class="social-buttons">
-                      <a href="https://github.com/ferdiokt" title=""
+                      <a
+                        href="https://github.com/ferdiokt"
+                        title=""
+                        target="_blank"
+                        rel="noopener noreferrer"
                         ><span class="social-round-icon fa-icon"
                           ><i class="fa fa-github"></i></span
                         >Ferdian Oktavianto</a
