--- a/templates/index.html
+++ b/templates/index.html
@@ -308,7 +308,11 @@
             <div class="card">
               <div class="card-block">
                 <h2>Contact</h2>
-                <form method="POST" action="index" class="reveal-content">
+                <form
+                  method="POST"
+                  action="success.html"
+                  class="reveal-content"
+                >
                   <div class="form-group">
                     <input
                       type="text"
