--- a/templates/index.html
+++ b/templates/index.html
@@ -310,7 +310,7 @@
                 <h2>Contact</h2>
                 <form
                   method="POST"
-                  action="success.html"
+                  action="{{url_for('success')}}"
                   class="reveal-content"
                 >
                   <div class="form-group">
